# vidprofile-svn

trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  bootstrap  configure.ac
trunk/doc/: Makefile.am  mkdocs  pkdocs  profile.man  psnrcore.man  vidprofile_main.css  vidpsnr.man
trunk/doc/html/: index.php
trunk/doc/src/: about.t2t  analysis.t2t  howto.t2t  incl-footer.t2t  incl-header.t2t  incl-nav.t2t  incl-poweredby.html  incl-vidprofilerc.t2t  man.t2t  profile.t2t  psnrcore.t2t  setup.t2t  vidprofile-documentation.xml  vidprofile.t2t  vidpsnr.t2t
trunk/src/: Makefile.am  lib-vidprofile.in  lib-vidprofile.sh.in  profile  profile.sh  psnrcore  psnrcore.sh  vidpsnr  vidpsnr.sh
